# online-detection-demo

./: .gitignore  CMakeLists.txt  INSTALL.md  INSTALL_ADVANCED.md  MODULES_GUIDE.md  README.md  detection_demo.lua  detection_example_output.txt  detection_image.lua  detection_speech_helper.lua  faster_rcnn_build.m  launch_FALKON_on_iCWT_7000_TASK1features_miniBootstrap.m  launch_FALKON_on_iCWT_TASK2_single.m  launch_FALKON_on_iCWT_trainval_5000.m  launch_FALKON_on_voc2007_ZF_trainvalTest.m  launch_FALKON_on_voc2007_ZF_validation_valTest.m  launch_Faster_RCNN_fiCWT_fromT1_toT2.m  launch_Faster_RCNN_finetune_iCWT.m  launch_Faster_RCNN_train_iCWT_TASK1.m  online_detection_build.m  pathdef.m  setup_mail_matlab.m  startup.m
.git_old/: config  index  packed-refs
Conf/: configuration_script.m  yarp_initialization.m
Demo/: Demo_forward.m  Demo_forward_prova.m  Demo_forward_yarp.m  Demo_forward_yarp.m~  Demo_train.m  Demo_train_yarp.m  Demo_train_yarp.m~  Detect.m  Detection_main.m  Predict.m  Predict.m~  Train_bbox_regressor.m  Train_region_classifier.m  configuration_script.m  predict_FALKON.m  predict_bbox_refinement.m  predict_bbox_refinement.m~
Scripts/: fetch_caffe.sh  fetch_falkon.sh  fetch_install_falkon.sh  fetch_install_faster_rcnn.sh  fetch_install_re3.sh  fetch_model.sh
Src/: .Predict.m.swp  Detect.m  Detection_main.m  predict_FALKON.m
app/: CMakeLists.txt
app/app/bash/: r1_data_acquisition.sh
app/app/config/: annotations_propagator_conf.ini
app/app/python/: detections_handler_py2.py
app/app/scripts/: onlineDetection_afar.xml
app/config/: annotations_propagator_conf.ini  detection_conf.ini  exploration_conf.ini  exploration_conf_icub.ini  exploration_icub_conf.ini  iCWT_player_conf.ini  interactive_exploration_conf_icub.ini  interactive_exploration_conf_icub_320x240.ini  interactive_exploration_conf_icub_640x480.ini  manager_conf.ini  showSup_conf.ini  ws_interact_module_conf.ini  ws_interact_module_conf_320x240.ini  ws_module_conf.ini
app/lua/: detection_demo.lua  detection_speech_helper.lua  detection_speech_helper_cts.lua  gaze_demo.lua
app/python/: BoxesVisualizer.py  Manager.py  detections_handler.py  iCWT_player_RF.py  track_blob.py  track_blob_320x240.py
app/scripts/: Test_AnnotationsPropagator.xml  Test_AnnotationsPropagator_R1.xml  Test_AnnotationsPropagator_icub.xml  Test_WS_offline.xml.template  Test_WS_offline_onlineDetection_interaction.xml  Test_withMatlab.xml  Test_withMatlab_R1.xml  WS-demo.xml  WS_onlineDetection.xml  WS_onlineDetection_icub.xml  WS_onlineDetection_icub_gui.xml  WS_onlineDetection_icub_gui_interaction.xml  WS_onlineDetection_icub_gui_interaction_showSup.xml  WS_onlineDetection_showSup.xml  detection-lua_R1.xml  detection-lua_iCub.xml  onlineDetection.xml  onlineDetection_python.xml  onlineDetection_python_icub.xml  onlineDetection_python_r1.xml  test_interactive_exploration_icub.xml  test_interactive_exploration_icub_withkarma.xml  test_interactive_exploration_icub_withkarma_withWS.xml
detection-demo/: CMakeLists.txt
experiments/: main_train_test_faster.m  script_faster_rcnn_ICUB_ZF.m  script_faster_rcnn_ICUB_ZF_voc_meanImage.m  script_faster_rcnn_VOC2007_ZF.m  script_faster_rcnn_VOC2007_ZF_TASK1.m  script_faster_rcnn_VOC2007_ZF_TASK2.m  script_faster_rcnn_VOC2007_ZF_finetune.m  script_faster_rcnn_VOC2007_ZF_finetune_TASK1.m  script_faster_rcnn_VOC2007_ZF_finetune_val.m  script_faster_rcnn_VOC2012_ZF.m  script_faster_rcnn_decomposed_ICUB_ZF.m  script_faster_rcnn_decomposed_voc2007_reduced_ZF.m  script_faster_rcnn_decomposed_voc2007_reduced_ZF.m~  script_faster_rcnn_decomposed_voc2007_reduced_ZF_multiple_exps.m  script_faster_rcnn_demo.m  script_faster_rcnn_iCWT_ZF_finetune.m  script_faster_rcnn_iCWT_ZF_finetune.m.save  script_faster_rcnn_iCWT_ZF_fromT1_forT2.m  script_faster_rcnn_incremental_ICUB_ZF.m  script_faster_rcnn_incremental_ICUB_ZF.m~  script_multiple_rls_voc2007_reduced_ZF.m  script_multiple_rls_voc2007_reduced_ZF_GPU.m
experiments_old/: script_faster_rcnn_ICUB_ZF.m
modules/: CMakeLists.txt
modules/blobAnnotation/: blobAnnotation.thrift  main.cpp
modules/detectionExtract/: CMakeLists.txt  detectionExtract.thrift
modules/human-structure/: CMakeLists.txt  main.cpp
modules/modules_cpp/: CMakeLists.txt
modules/modules_cpp/blobAnnotation/: main.cpp
modules/modules_cpp/humanStructure/: main.cpp
modules/modules_cpp/yarp-augmentation/: CMakeLists.txt  main.cpp
modules/modules_cpp/yarp-augmentation/app/conf/: config.ini
modules/modules_cpp/yarp-blob/: main.cpp
modules/modules_cpp/yarp-multi-viewer/: main.cpp
modules/modules_cpp/yarp-multi-viewer/app/conf/: config.ini
modules/modules_matlab/: online_detection_build.m  startup.m
modules/modules_matlab/Conf/: configuration_script.m
modules/modules_matlab/Src/: Detection_main.m
modules/modules_matlab/functions/bbox_regression/: cnn_train_bbox_regressor_norm.m
modules/modules_matlab/functions/classifiers/: .Faster_with_FALKON_train_randBKG_fullBootstrap.m.swp  Faster_with_FALKON_test_fullBootstrap.m  rcnn_create_model.m
modules/modules_matlab/functions/feature_extraction/: Compute_sigma_range.m  rcnn_scale_features_try_try.m
modules/modules_matlab/utils/: half_bkg_region.m  select_positives_for_bbox.m  showboxes.m
modules/modules_python/: CMakeLists.txt
modules/modules_python/AnnotationsPropagator/: AnnotationsPropagator.py  AnnotationsPropagator.py.in
modules/modules_python/Exploration/: ExplorationModule_icub.py
modules/modules_python/Gui/: OODRemote.py
modules/modules_python/Gui/docker/: Dockerfile
modules/modules_python/WeakSupervision/: InteractionBasedMethod.py  StreamUncertaintyBasedMethod.py  StreamUncertaintyBasedMethod.py.in  WeakSupervisionTemplate.py
modules/test-dispBlobber/: CMakeLists.txt  main.cpp
modules/yarp-augmentation/: CMakeLists.txt  README.md  main.cpp  yarp-augmentation.thrift
modules/yarp-blob/: CMakeLists.txt  main.cpp
modules/yarp-multi-viewer/: CMakeLists.txt  README.md  main.cpp
modules/yarp-multi-viewer/app/: CMakeLists.txt
modules_cpp/blobAnnotation/: CMakeLists.txt
(+432 files in other folders)
