# Copyright (C) 2018 Fondazione Istituto Italiano di Tecnologia (IIT)
# All Rights Reserved.
# Authors: Vadim Tikhanoff <vadim.tikhanoff@iit.it>

add_subdirectory(blobAnnotation)
add_subdirectory(humanStructure)
add_subdirectory(detectionExtract)
add_subdirectory(yarp-blob)
add_subdirectory(yarp-augmentation)
add_subdirectory(yarp-multi-viewer)
